--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -150,6 +150,13 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+# Colors
+
+client.focused #859900 #859900 #fdf6e3 #859900
+client.focused_inactive #073642 #073642 #eee8d5 #6c71c4
+client.unfocused #073642 #073642 #93a1a1 #586e75
+client.urgent #d33682 #d33682 #fdf6e3 #dc322f
+
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -157,6 +164,15 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
         position top
+        colors {
+                background #002b36
+                separator #dc322f
+                statusline #268bd2
+                focused_workspace #fdf6e3 #859900 #fdf6e3
+                active_workspace #fdf6e3 #6c71c4 #fdf6e3
+                inactive_workspace #586e75 #93a1a1 #002b36
+                urgent_workspace #d33682 #d33682 #fdf6e3
+        }
 }
 
 exec /home/gl/bin/mysshadd
