--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -11,6 +11,7 @@
 
 set $mod Mod4
 
+exec /usr/bin/compton --vsync opengl-swc
 exec /usr/bin/dropbox start
 exec /usr/bin/ssh-add
 exec /home/gl/tools/xflux -l 43.645858 -g 1.50032 
