--- a/i3/dot.i3status.conf
+++ b/i3/dot.i3status.conf
@@ -12,7 +12,6 @@ general {
 }
 
 order += "disk /"
-order += "ethernet eth0"
 order += "load"
 order += "tztime local"
 
@@ -21,7 +20,7 @@ wireless wlan0 {
         format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet br0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
