--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -192,3 +192,14 @@ for_window [title="RaceTheSun"] floating enable
 for_window [title="CardCityNights"] floating enable
 for_window [title="Karma - Google Chrome" class="Google-chrome"] move container to workspace 6
 
+# Outputs: VGA-0 HDMI-0 HDMI-1
+
+workspace 1 output VGA-0
+workspace 2 output VGA-0
+workspace 3 output HDMI-1
+workspace 4 output HDMI-0
+workspace 5 output HDMI-1
+workspace 6 output VGA-0
+workspace 7 output VGA-0
+workspace 8 output HDMI-1
+workspace 9 output HDMI-0
