--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -18,12 +18,13 @@ exec /home/gl/tools/xflux -l 43.645858 -g 1.50032
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
 # font pango:DejaVu Sans Mono 10
+font pango:Source Code Pro 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -165,6 +166,7 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
         position top
+        font pango:Source Code Pro 10
         colors {
                 background #002b36
                 separator #dc322f
@@ -187,10 +189,13 @@ exec /usr/bin/icedove
 exec /usr/bin/xset m 4/1
 exec /usr/bin/Esetroot /home/gl/share/backgrounds/trialscreen/stretch.png
 
+workspace_layout stacking
+
 for_window [title="The Bridge"] floating enable
 for_window [title="RaceTheSun"] floating enable
 for_window [title="CardCityNights"] floating enable
-for_window [title="Karma - Google Chrome" class="Google-chrome"] move container to workspace 6
+for_window [title="Karma - Google Chrome" class="google-chrome"] move container to workspace 6
+for_window [title="^Developer Tools" class="google-chrome"] move container to workspace 2
 
 # Outputs: VGA-0 HDMI-0 HDMI-1
 
