--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -11,7 +11,7 @@
 
 set $mod Mod4
 
-exec /usr/bin/compton --vsync opengl-swc
+exec /usr/bin/compton --vsync opengl
 exec /usr/bin/dropbox start
 exec /usr/bin/ssh-add
 exec /home/gl/tools/xflux -l 43.645858 -g 1.50032 
@@ -31,6 +31,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec gnome-terminal --window-with-profile=support --role=support
 
 # kill focused window
 bindsym $mod+Shift+a kill
@@ -48,6 +49,7 @@ bindsym $mod+Shift+g exec google-chrome
 bindsym $mod+Ctrl+Mod1+Return exec /opt/sublime_text/sublime_text
 bindsym Mod1+F2 exec /usr/bin/grun
 bindsym --release Print exec /home/gl/bin/myscrot -s
+bindsym Shift+Print exec /home/gl/bin/scrot/lastscrot.sh
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -183,11 +185,12 @@ exec /usr/local/bin/pa-applet
 exec /usr/bin/xautolock -locker /usr/bin/i3lock
 exec /home/gl/.screenlayout/gl.sh
 exec /usr/bin/google-musicmanager
-exec /home/gl/tools/copy.com/copy/x86_64/CopyAgent
+exec /usr/bin/megasync
 exec /usr/bin/pidgin
 exec /usr/bin/icedove
 exec /usr/bin/xset m 4/1
-exec /usr/bin/Esetroot /home/gl/share/backgrounds/trialscreen/stretch.png
+exec /usr/bin/Esetroot /home/gl/share/backgrounds/trialscreen/black.png
+exec /usr/bin/python /home/gl/bin/FolderWatch/main.py
 
 workspace_layout stacking
 
@@ -196,15 +199,16 @@ for_window [title="RaceTheSun"] floating enable
 for_window [title="CardCityNights"] floating enable
 for_window [title="Karma - Google Chrome" class="google-chrome"] move container to workspace 6
 for_window [title="^Developer Tools" class="google-chrome"] move container to workspace 2
+for_window [window_role="^support"] move container to workspace 5
 
 # Outputs: VGA-0 HDMI-0 HDMI-1
 
-workspace 1 output VGA-0
-workspace 2 output VGA-0
-workspace 3 output HDMI-1
-workspace 4 output HDMI-0
-workspace 5 output HDMI-1
-workspace 6 output VGA-0
-workspace 7 output VGA-0
-workspace 8 output HDMI-1
-workspace 9 output HDMI-0
+workspace 1 output VGA-1
+workspace 2 output VGA-1
+workspace 3 output HDMI-2
+workspace 4 output HDMI-1
+workspace 5 output HDMI-2
+workspace 6 output VGA-1
+workspace 7 output VGA-1
+workspace 8 output HDMI-2
+workspace 9 output HDMI-1
