--- a/i3/dot.i3status.conf
+++ b/i3/dot.i3status.conf
@@ -11,11 +11,13 @@ general {
         interval = 5
 }
 
+order += "battery 0"
 order += "disk /"
 order += "load"
 order += "tztime local"
+order += "wireless wlp1s0"
 
-wireless wlan0 {
+wireless wlp1s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
@@ -49,3 +51,13 @@ load {
 disk "/" {
         format = "%free"
 }
+battery 0 {
+   format = "%status %percentage %remaining %emptytime"
+   format_down = "No battery"
+   status_chr = "⚇ CHR"
+   status_bat = "⚡ BAT"
+   status_full = "☻ FULL"
+   path = "/sys/class/power_supply/BAT%d/uevent"
+   low_threshold = 10
+}
+
