--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -189,7 +189,7 @@ bar {
 exec /home/gl/bin/mysshadd
 exec /usr/local/bin/pa-applet
 exec /usr/bin/xautolock -locker /usr/bin/i3lock -i /home/gl/Images/lock.png
-exec /home/gl/.screenlayout/ITrust.sh
+exec /home/gl/.screenlayout/ondock.sh
 # exec /usr/bin/google-musicmanager
 # exec /usr/bin/megasync
 # exec /usr/bin/pidgin
@@ -212,15 +212,15 @@ for_window [window_role="^buddy_list$" class="Pidgin"] move container to workspa
 for_window [title="KeePass" class="KeePass2"] move container to workspace 10
 for_window [class="TeamViewer"] floating enable
 
-# Outputs: eDP-1 HDMI-1
+# Outputs: eDP-1 HDMI-1 DP-1-1 DP-1-3
 
 workspace 1 output eDP-1
-workspace 2 output HDMI-1
-workspace 3 output HDMI-1
-workspace 4 output HDMI-1
-workspace 5 output HDMI-1
-workspace 6 output HDMI-1
-workspace 7 output HDMI-1
-workspace 8 output HDMI-1
-workspace 9 output HDMI-1
-workspace 10 output HDMI-1
+workspace 2 output DP-1-1
+workspace 3 output DP-1-1
+workspace 4 output DP-1-3
+workspace 5 output DP-1-3
+workspace 6 output DP-1-1
+workspace 7 output DP-1-1
+workspace 8 output DP-1-1
+workspace 9 output DP-1-3
+workspace 10 output eDP-1
