--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -15,7 +15,7 @@ set $mod Mod4
 
 exec /usr/bin/compton --vsync opengl
 exec /usr/bin/dropbox start
-exec /home/gl/tools/xflux -l 43.645858 -g 1.50032 
+exec /home/gl/tools/xflux -l 43.645858 -g 1.50032
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -48,6 +48,7 @@ bindsym $mod+d exec dmenu_run
 bindsym $mod+l exec i3lock -i /home/gl/Images/lock.png
 bindsym XF86Sleep exec i3lock -i /home/gl/Images/lock.png
 bindsym XF86AudioPlay exec /home/gl/bin/playpause
+bindsym XF86Calculator exec /home/gl/bin/passdmenu.py
 bindsym $mod+Shift+g exec google-chrome
 bindsym $mod+Shift+f exec /home/gl/bin/ffx
 bindsym $mod+Ctrl+Mod1+Return exec /usr/bin/atom
@@ -201,8 +202,11 @@ exec /usr/bin/volumeicon
 exec /usr/bin/chromix-too-server
 exec /usr/bin/mediatomb -e wlp1s0 -d
 exec /usr/bin/Esetroot /home/gl/Images/lock.png
+exec /home/gl/Téléchargements/mattermost-desktop-3.7.1/mattermost-desktop
 
 workspace_layout stacking
+new_window pixel 0
+hide_edge_borders both
 
 for_window [window_role="^conversation$" class="Pidgin"] move container to workspace 1
 for_window [class="Firefox" title="^Boîte de réception"] move container to workspace 1
@@ -210,6 +214,7 @@ for_window [class="Atom"] move container to workspace 3
 for_window [window_role="^buddy_list$" class="Pidgin"] move container to workspace 10
 for_window [title="KeePass" class="KeePass2"] move container to workspace 10
 for_window [class="TeamViewer"] floating enable
+for_window [class="Mgtk.py"] move container to workspace 10
 
 # Outputs: eDP-1 HDMI-1 DP-1-1 DP-1-3
 
