--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -15,6 +15,7 @@ set $mod Mod4
 
 exec /usr/bin/compton --vsync opengl
 exec /usr/bin/dropbox start
+exec /usr/bin/blueman-applet
 exec /home/gl/tools/xflux -l 43.645858 -g 1.50032
 
 # Font for window titles. Will also be used by the bar unless a different font
