--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -16,7 +16,8 @@ set $mod Mod4
 exec /usr/bin/compton --vsync opengl
 exec /usr/bin/owncloud
 exec /usr/bin/blueman-applet
-exec /home/gl/tools/xflux -l 43.645858 -g 1.50032
+exec /usr/bin/gpg-agent
+exec /home/ghislain/tools/xflux -l 43.645858 -g 1.50032
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -46,17 +47,17 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+l exec i3lock -i /home/gl/Images/lock.png
-bindsym XF86Sleep exec i3lock -i /home/gl/Images/lock.png
-bindsym XF86AudioPlay exec /home/gl/bin/playpause
-bindsym XF86Calculator exec /home/gl/bin/passdmenu.py
+bindsym $mod+l exec i3lock -i /home/ghislain/Images/lock.png
+bindsym XF86Sleep exec i3lock -i /home/ghislain/Images/lock.png
+bindsym XF86AudioPlay exec /home/ghislain/bin/playpause
+bindsym XF86Calculator exec /home/ghislain/bin/passdmenu.py
 bindsym $mod+Shift+g exec google-chrome
-bindsym $mod+Shift+f exec /home/gl/bin/ffx
+bindsym $mod+Shift+f exec /usr/bin/firefox
 bindsym $mod+Ctrl+Mod1+Return exec /usr/bin/atom
 bindsym $mod+Ctrl+Mod1+BackSpace exec /usr/bin/keepass2 --auto-type
 bindsym Mod1+F2 exec /usr/bin/grun
-bindsym --release Print exec /home/gl/bin/myscrot -s
-bindsym Shift+Print exec /home/gl/bin/scrot/lastscrot.sh
+bindsym --release Print exec /home/ghislain/bin/myscrot -s
+bindsym Shift+Print exec /home/ghislain/bin/scrot/lastscrot.sh
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -134,9 +135,9 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # TELEPHONE
-bindsym $mod+t exec "/home/gl/bin/scriptel/headset.py"
-bindsym $mod+Shift+t exec "/home/gl/bin/scriptel/call_number"
-bindsym $mod+Ctrl+t exec "/home/gl/bin/address_book"
+bindsym $mod+t exec "/home/ghislain/bin/scriptel/headset.py"
+bindsym $mod+Shift+t exec "/home/ghislain/bin/scriptel/call_number"
+bindsym $mod+Ctrl+t exec "/home/ghislain/bin/address_book"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -174,7 +175,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command /home/gl/bin/myi3status
+        status_command /home/ghislain/bin/myi3status
         position top
         font pango:Source Code Pro 10
         colors {
@@ -188,22 +189,19 @@ bar {
         }
 }
 
-exec /home/gl/bin/mysshadd
-exec /usr/local/bin/pa-applet
-exec /usr/bin/xautolock -locker /usr/bin/i3lock -i /home/gl/Images/lock.png
-exec /home/gl/.screenlayout/ondock.sh
+exec /home/ghislain/bin/mysshadd
+exec /usr/bin/xautolock -locker /usr/bin/i3lock -i /home/ghislain/Images/lock.png
+exec /home/ghislain/.screenlayout/default_layout.sh
 # exec /usr/bin/google-musicmanager
 # exec /usr/bin/megasync
 # exec /usr/bin/icedove
 exec /usr/bin/xset m 4/1
 exec /usr/bin/xsetroot -solid "#002b36"
-# exec /usr/bin/python /home/gl/bin/FolderWatch/main.py
+# exec /usr/bin/python /home/ghislain/bin/FolderWatch/main.py
 exec /usr/bin/nm-applet
 exec /usr/bin/volumeicon
-exec /usr/bin/chromix-too-server
-exec /usr/bin/mediatomb -e wlp1s0 -d
-exec /usr/bin/Esetroot /home/gl/Images/lock.png
-exec /home/gl/Téléchargements/mattermost-desktop-3.7.1/mattermost-desktop
+exec /usr/bin/Esetroot /home/ghislain/Images/lock.png
+exec /home/ghislain/bin/auto_layout.sh
 
 workspace_layout stacking
 new_window pixel 0
@@ -217,15 +215,15 @@ for_window [title="KeePass" class="KeePass2"] move container to workspace 10
 for_window [class="TeamViewer"] floating enable
 for_window [class="Mgtk.py"] move container to workspace 10
 
-# Outputs: eDP-1 HDMI-1 DP-1-1 DP-1-3
+# Outputs: eDP-1 DP-1 HDMI-2
 
 workspace 1 output eDP-1
-workspace 2 output DP-1-1
-workspace 3 output DP-1-1
-workspace 4 output DP-1-3
-workspace 5 output DP-1-3
-workspace 6 output DP-1-1
-workspace 7 output DP-1-1
-workspace 8 output DP-1-1
-workspace 9 output DP-1-3
+workspace 2 output HDMI-2
+workspace 3 output HDMI-2
+workspace 4 output DP-1
+workspace 5 output DP-1
+workspace 6 output HDMI-2
+workspace 7 output HDMI-2
+workspace 8 output HDMI-2
+workspace 9 output DP-1
 workspace 10 output eDP-1
