--- a/i3/dot.i3/config
+++ b/i3/dot.i3/config
@@ -18,6 +18,8 @@ exec /usr/bin/owncloud
 exec /usr/bin/blueman-applet
 exec /usr/bin/gpg-agent
 exec /home/ghislain/tools/xflux -l 43.645858 -g 1.50032
+exec /usr/bin/xset -dpms
+exec /usr/bin/xset s off
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -51,15 +53,16 @@ bindsym $mod+l exec i3lock -i /home/ghislain/Images/lock.png
 bindsym XF86Sleep exec i3lock -i /home/ghislain/Images/lock.png
 bindsym XF86AudioPlay exec /home/ghislain/bin/playpause
 bindsym XF86TouchpadToggle exec /home/ghislain/bin/passdmenu.py
-bindsym XF86AudioRaiseVolume exec /home/ghislain/bin/volup
-bindsym XF86AudioLowerVolume exec /home/ghislain/bin/voldn
-bindsym XF86AudioMute exec /home/ghislain/bin/mute
+bindsym XF86AudioRaiseVolume exec /home/ghislain/bin/pactl_volume.sh +10%
+bindsym XF86AudioLowerVolume exec /home/ghislain/bin/pactl_volume.sh -10%
+bindsym XF86AudioMute exec /home/ghislain/bin/pactl_volume.sh M
 bindsym $mod+Shift+g exec google-chrome
 bindsym $mod+Shift+f exec /usr/bin/firefox
 bindsym $mod+Ctrl+Mod1+Return exec /usr/bin/atom
 bindsym $mod+Ctrl+Mod1+BackSpace exec /usr/bin/keepass2 --auto-type
 bindsym Mod1+F2 exec /usr/bin/grun
 bindsym Mod1+F3 exec /home/ghislain/bin/passdmenu.py
+bindsym Mod1+F4 exec /home/ghislain/.screenlayout/layout_menu.sh
 bindsym --release Print exec /home/ghislain/bin/myscrot -s
 bindsym Shift+Print exec /home/ghislain/bin/scrot/lastscrot.sh
 
