--- a/i3/dot.i3status.conf
+++ b/i3/dot.i3status.conf
@@ -9,10 +9,9 @@
 general {
         colors = true
         interval = 5
+        markup = "pango"
 }
 
-order += "battery 0"
-order += "disk /"
 order += "load"
 order += "tztime local"
 order += "wireless wlp2s0"
@@ -26,10 +25,6 @@ ethernet br0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
-}
-
-battery 0 {
-        format = "%status %percentage %remaining"
 }
 
 run_watch DHCP {
@@ -46,17 +41,4 @@ tztime local {
 
 load {
         format = "%1min"
-}
-
-disk "/" {
-        format = "%free"
-}
-battery 0 {
-   format = "%status %percentage %remaining %emptytime"
-   format_down = "No battery"
-   status_chr = "⚇ CHR"
-   status_bat = "⚡ BAT"
-   status_full = "☻ FULL"
-   path = "/sys/class/power_supply/BAT%d/uevent"
-   low_threshold = 10
 }
